2009-10-12  Sam Steingold  <sds@gnu.org>

	* progmodes/compile.el (compilation-next-error-function): Fix the
	timestamps if the buffer has been visited before

2009-10-12  Glenn Morris  <rgm@gnu.org>

	* net/tramp-smb.el (tramp-smb-do-file-attributes-with-stat):
	Let-bind `size'.

2009-10-12  Juanma Barranquero  <lekktu@gmail.com>

	* proced.el (proced-unload-function): New function.

	* bs.el (bs-mode): Set `revert-buffer-function' to `bs-refresh'.
	(bs-refresh): Add IGNORED arg for `revert-buffer' compatibility.
	Doc fix.

	* menu-bar.el (menu-bar-file-menu): Fix format of `separator-exit' item.

2009-10-11  Juri Linkov  <juri@jurta.org>

	* files-x.el (read-file-local-variable-value):
	Provide default value only for bound variables (bug#4664).

2009-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-local-host-p): Function shall return nil for
	connection methods like smb.

	* net/tramp-cache.el (tramp-flush-connection-property): The hash
	can be empty.

	* net/tramp-smb.el (tramp-smb-errors): Add error messages.
	(tramp-smb-file-name-handler-alist): Add handlers for
	`add-name-to-file', `make-symbolic-link'.
	(tramp-smb-handle-add-name-to-file)
	(tramp-smb-do-file-attributes-with-stat)
	(tramp-smb-handle-make-symbolic-link)
	(tramp-smb-get-cifs-capabilities): New defuns.
	(tramp-smb-handle-copy-directory, tramp-smb-handle-copy-file)
	(tramp-smb-handle-delete-directory, tramp-smb-handle-delete-file)
	(tramp-smb-handle-file-local-copy)
	(tramp-smb-handle-make-directory-internal)
	(tramp-smb-handle-rename-file, tramp-smb-handle-write-region):
	The file name syntax depends on cifs capabilities.
	(tramp-smb-handle-file-attributes):
	Call `tramp-smb-do-file-attributes-with-stat' if possible.
	(tramp-smb-handle-insert-directory): Use posix attributes if possible.
	(tramp-smb-handle-set-file-modes): It is applicable for posix only.

2009-10-11  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/eieio.el: Avoid requiring cl at runtime.